# PyVisGraph

./: README,.md  README.md  ROADMAP.md  graph.conf.yaml  preset.yaml  pyproject.toml  server.py  trial.py
docs/: architecture.md  configs.md  design.md  graph.md  node_model.md  preset.md  validation.md
example/: README.md  new_nodes.py
pydanticGraph/: __init__.py  __main__.py  config.py  formatting.py  graph.py  node.py  scan.py  server.py  validate.py
pydanticGraph/node/: __init__.py  base.py
pydanticGraph/proto/: model.proto
pydanticGraph/server/: server.py
pyvisgraph/: __init__.py  __main__.py  config.py  configs.py  default.py-vis-graph-preset.yaml  manager.py  server.py
pyvisgraph/api/: server.py
pyvisgraph/api/graph/: __init__.py  base.py  mixins.py  processor.py
pyvisgraph/api/mart/: mart.py  mixin.py  operator.py
pyvisgraph/api/processor/: base.py  litegraph.py
pyvisgraph/back/: __init__.py  format.py  formatting.py  main.py  scan.py
pyvisgraph/back/format/: base.py  litegraph.py  processor.py
pyvisgraph/back/graph/: __init__.py  base.py  formatter.py  mixins.py  utils.py
pyvisgraph/back/mart/: __init__.py  mart.py  mixin.py  operator.py
pyvisgraph/backend/: __init__.py  base.py  mart.py  operator.py  server.py
pyvisgraph/backend/format/: __init__.py  base.py  litegraph.py  processor.py
pyvisgraph/backend/mart/: base.py  (+3 more)
pyvisgraph/settings/: __init__.py  cli.py  configs.py  manager.py  utils.py
pyvisgraph/web/: index.html  modal.css
scripts/: scripts.bash  start.md
test/: b.py  c.py  default.yaml  graph.json  hello.py  nodes.py  parse_graph.py  t.py  take.py  trail.py  trial.py
test/processor/: main.py
test/special_nodes/: kafka.py
web/: api.js  app.js  index.html
web/scripts/: api.js  api.ts  app.js  app.ts  tsconfig.json
(+9 files in other folders)
