[tool.poetry]
name = "pydantic-litegraph"
version = "0.1.0"
description = ""
authors = ["Nikita <n.mashalov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.3"
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
